Ribbon as HAML parameter

--- a/lib/views/layout.haml
+++ b/lib/views/layout.haml
@@ -9,8 +9,9 @@
   %body
     .body
       %a{:href => "https://github.com/pikesley/pokrovsky"}
+      -if defined? github_ribbon
         %img{:style => "position: absolute; top: 0; right: 0; border: 0;",
-             :src => "https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png",
+             :src => "https://s3.amazonaws.com/github/ribbons/forkme_%s.png" % [ github_ribbon ],
              :alt => "Fork me on GitHub"}
 
     .container
