--- a/lib/views/layout.haml
+++ b/lib/views/layout.haml
@@ -19,8 +19,6 @@
 
   %footer
     %p.text-center
-      %a{:href => "http://github.com/pikesley/pokrovsky"}Source on Github
-      |
-      %a{:href => "http://travis-ci.org/pikesley/pokrovsky"}Built on Travis
-      |
-      %a{:href => "http://heroku.com"}Hosted on Heroku
+      %a.btn.btn-default{:href => "http://github.com/pikesley/pokrovsky"}Source on Github
+      %a.btn.btn-default{:href => "http://travis-ci.org/pikesley/pokrovsky"}Built on Travis
+      %a.btn.btn-default{:href => "http://heroku.com"}Hosted on Heroku
