--- a/lib/views/layout.haml
+++ b/lib/views/layout.haml
@@ -8,17 +8,17 @@
 
   %body
     .body
-      %a{:href => "https://github.com/pikesley/pokrovsky"}
-      -if defined? github_ribbon
+    -if defined? github[:ribbon]
+      %a{:href => "https://github.com/%s/%s" % [ github[:user], github[:project] ] }
         %img{:style => "position: absolute; top: 0; right: 0; border: 0;",
-             :src => "https://s3.amazonaws.com/github/ribbons/forkme_%s.png" % [ github_ribbon ],
-             :alt => "Fork me on GitHub"}
+           :src => "https://s3.amazonaws.com/github/ribbons/forkme_%s.png" % [ github[:ribbon] ],
+           :alt => "Fork me on GitHub"}
 
-    .container
-      = yield
+      .container
+        = yield
 
   %footer
     %p.text-center
-      %a.btn.btn-default{:href => "http://github.com/pikesley/pokrovsky"}Source on Github
-      %a.btn.btn-default{:href => "http://travis-ci.org/pikesley/pokrovsky"}Built on Travis
+      %a.btn.btn-default{:href => "http://github.com/%s/%s" % [ github[:user], github[:project] ] }Source on Github
+      %a.btn.btn-default{:href => "http://travis-ci.org/%s/%s" % [ github[:user], github[:project] ] }Built on Travis
       %a.btn.btn-default{:href => "http://heroku.com"}Hosted on Heroku
