link to sam.pikesley.org

--- a/lib/views/layout.haml
+++ b/lib/views/layout.haml
@@ -26,3 +26,4 @@
         %a.btn.btn-default{:href => "http://github.com/%s/%s" % [ github[:user], github[:project] ] }Source on Github
         %a.btn.btn-default{:href => "http://travis-ci.org/%s/%s" % [ github[:user], github[:project] ] }Built on Travis
         %a.btn.btn-default{:href => "http://heroku.com"}Hosted on Heroku
+        %a.btn.btn-default{:href => "http://sam.pikesley.org"}More of my stuff
