--- a/lib/views/layout.haml
+++ b/lib/views/layout.haml
@@ -19,7 +19,10 @@
            :alt => "Fork me on GitHub"}
 
       .container
-        = yield
+        .col-md-2
+        .col-md-8
+          = yield
+        .col-md-2
 
     %footer
       %p.text-center
